--- a/PartyMaker/uk.lproj/Language.strings
+++ b/PartyMaker/uk.lproj/Language.strings
@@ -23,3 +23,5 @@
 "ENTER_DADA" = "Введіть ім'я та пароль";
 
 "COPY_USER" = "Користувач з таким ім'ям вже існує";
+
+"CHOOSE_LOCATION" = "ОБРАТИ МІСЦЕ";
