Commit 24.3 New methods for CoreData + fix bag with slider + localization + analyze.

--- a/PartyMaker/en.lproj/Language.strings
+++ b/PartyMaker/en.lproj/Language.strings
@@ -25,3 +25,13 @@
 "COPY_USER" = "The user with the same name is already registered";
 
 "CHOOSE_LOCATION" = "CHOOSE LOCATION";
+
+"RESET" = "Reset";
+
+"NAME_PARTY_MAP" = "Party name";
+
+"ERROR_ERROR" = "Error!";
+
+"ERROR_NO_DATE" = "You should enter a party date!";
+
+"ERROR_NO_NAME" = "You should enter a party name!";
