--- a/PartyMaker/uk.lproj/Main.strings
+++ b/PartyMaker/uk.lproj/Main.strings
@@ -3,7 +3,7 @@
 "1Bt-Ie-KMy.text" = "00:00";
 
 /* Class = "UILabel"; text = "PARTY NAME"; ObjectID = "30E-rw-Ivh"; */
-"30E-rw-Ivh.text" = "ІМ'Я ВЕЧІРКИ";
+"30E-rw-Ivh.text" = "НАЗВА ВЕЧІРКИ";
 
 /* Class = "UITabBarItem"; title = "Settings"; ObjectID = "39q-5T-MxL"; */
 "39q-5T-MxL.title" = "Налаштування";
@@ -23,6 +23,12 @@
 /* Class = "UINavigationItem"; title = "CHOOSE PARTY LOCATION"; ObjectID = "7Em-Mw-hbr"; */
 "7Em-Mw-hbr.title" = "ОБРАТИ МІСЦЕ";
 
+/* Class = "UIButton"; normalTitle = "SIGN OUT"; ObjectID = "9ex-0q-eHc"; */
+"9ex-0q-eHc.normalTitle" = "ВИХІД";
+
+/* Class = "UILabel"; text = "Detail"; ObjectID = "9qf-sE-o93"; */
+"9qf-sE-o93.text" = "Detail";
+
 /* Class = "UIButton"; normalTitle = "EDIT"; ObjectID = "CyR-54-Kt7"; */
 "CyR-54-Kt7.normalTitle" = "РЕДАГУВАННЯ";
 
@@ -35,14 +41,29 @@
 /* Class = "UILabel"; text = "11.20.2016"; ObjectID = "FF3-YP-vkm"; */
 "FF3-YP-vkm.text" = "11.20.2016";
 
-/* Class = "UITextField"; placeholder = "Login"; ObjectID = "J1G-4V-3Eb"; */
-"J1G-4V-3Eb.placeholder" = "ЛОГІН";
+/* Class = "UILabel"; text = "00:00"; ObjectID = "G7K-DZ-24z"; */
+"G7K-DZ-24z.text" = "00:00";
+
+/* Class = "UILabel"; text = "11.20.2016"; ObjectID = "Hba-zd-Q2B"; */
+"Hba-zd-Q2B.text" = "11.20.2016";
+
+/* Class = "UILabel"; text = "DATE"; ObjectID = "KKE-37-yrO"; */
+"KKE-37-yrO.text" = "ДАТА";
+
+/* Class = "UILabel"; text = "Party Maker 2016(c) Version: 1.0 (1) "; ObjectID = "MMJ-iN-OtG"; */
+"MMJ-iN-OtG.text" = "Паті мейкер 2016(c) Версія: 1.0 (1) ";
 
 /* Class = "UILabel"; text = "HELLO!"; ObjectID = "NPM-gb-xae"; */
 "NPM-gb-xae.text" = "ПРИВІТ!";
 
+/* Class = "UITabBarItem"; title = "Location"; ObjectID = "OUz-U8-Jna"; */
+"OUz-U8-Jna.title" = "Місця";
+
 /* Class = "UILabel"; text = "END"; ObjectID = "PEL-Zw-a2U"; */
 "PEL-Zw-a2U.text" = "КІНЕЦЬ";
+
+/* Class = "UILabel"; text = "Developed for        Softheme IOS Internship 2016                                           by Petrov Anton"; ObjectID = "PND-fZ-kCz"; */
+"PND-fZ-kCz.text" = "Розроблено для        Softheme IOS Internship 2016                                           Петров Антон";
 
 /* Class = "UIButton"; normalTitle = "SIGN IN"; ObjectID = "QZR-bx-GGK"; */
 "QZR-bx-GGK.normalTitle" = "УВІЙТИ";
@@ -53,8 +74,14 @@
 /* Class = "UILabel"; text = "Label"; ObjectID = "UTV-ss-AtV"; */
 "UTV-ss-AtV.text" = "Label";
 
+/* Class = "UINavigationItem"; title = "PARTY INFO"; ObjectID = "Vev-Rk-dv2"; */
+"Vev-Rk-dv2.title" = "ІНФОРМАЦІЯ";
+
 /* Class = "UILabel"; text = "Label"; ObjectID = "XOb-XQ-BhI"; */
 "XOb-XQ-BhI.text" = "Label";
+
+/* Class = "UINavigationItem"; title = "USERS"; ObjectID = "XbY-L6-dIg"; */
+"XbY-L6-dIg.title" = "КОРИСТУВАЧІ";
 
 /* Class = "UILabel"; text = "DESCRIPTION"; ObjectID = "c0x-g0-CJu"; */
 "c0x-g0-CJu.text" = "ОПИС";
@@ -68,17 +95,23 @@
 /* Class = "UILabel"; text = "LOCATION"; ObjectID = "e97-Bm-Z8V"; */
 "e97-Bm-Z8V.text" = "МІСЦЕ";
 
+/* Class = "UILabel"; text = "END"; ObjectID = "ebz-A1-PhT"; */
+"ebz-A1-PhT.text" = "КІНЕЦЬ";
+
 /* Class = "UIButton"; normalTitle = "DELETE"; ObjectID = "fnb-FM-n72"; */
 "fnb-FM-n72.normalTitle" = "ВИДАЛИТИ";
 
 /* Class = "UITextField"; placeholder = "Party name"; ObjectID = "hHj-Em-MG8"; */
-"hHj-Em-MG8.placeholder" = "Ім'я вечірки";
+"hHj-Em-MG8.placeholder" = "Назва вечірки";
 
 /* Class = "UILabel"; text = "00:30"; ObjectID = "hbT-NU-mKP"; */
 "hbT-NU-mKP.text" = "00:30";
 
 /* Class = "UIButton"; normalTitle = "CHOOSE DATE"; ObjectID = "hsF-8K-sc2"; */
 "hsF-8K-sc2.normalTitle" = "ОБРАТИ ДАТУ";
+
+/* Class = "UILabel"; text = "PARTY MAKER"; ObjectID = "jA8-gb-eLu"; */
+"jA8-gb-eLu.text" = "PARTY MAKER";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "jZ5-Zu-GPo"; */
 "jZ5-Zu-GPo.text" = "Label";
@@ -92,35 +125,50 @@
 /* Class = "UIButton"; normalTitle = "REGISTER"; ObjectID = "kOs-Ll-69U"; */
 "kOs-Ll-69U.normalTitle" = "РЕЄСТРАЦІЯ";
 
+/* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "lJp-Xz-tRY"; */
+"lJp-Xz-tRY.title" = "Назад";
+
 /* Class = "UILabel"; text = "START"; ObjectID = "lpx-hc-mlk"; */
 "lpx-hc-mlk.text" = "ПОЧАТОК";
 
+/* Class = "UILabel"; text = "Title"; ObjectID = "m1x-e0-yOC"; */
+"m1x-e0-yOC.text" = "Title";
+
 /* Class = "UIButton"; normalTitle = "LOCATION"; ObjectID = "nnd-S3-yCU"; */
-"nnd-S3-yCU.normalTitle" = "МІСЦЕ ЗНАХОДЖЕННЯ";
+"nnd-S3-yCU.normalTitle" = "МІСЦЕ";
 
 /* Class = "UINavigationItem"; title = "CREATE PARTY"; ObjectID = "o96-ax-zNB"; */
 "o96-ax-zNB.title" = "СТВОРИТИ ВЕЧІРКУ";
 
 /* Class = "UITabBarItem"; title = "Parties"; ObjectID = "pw7-fT-RjP"; */
-"pw7-fT-RjP.title" = "Мої паті";
+"pw7-fT-RjP.title" = "Вечірки";
 
 /* Class = "UILabel"; text = "label label labellabelv"; ObjectID = "qUe-fQ-UDP"; */
 "qUe-fQ-UDP.text" = "label label labellabelv";
 
-/* Class = "UITextField"; placeholder = "Password"; ObjectID = "qop-EX-f6e"; */
-"qop-EX-f6e.placeholder" = "Пароль";
+/* Class = "UILabel"; text = "Label"; ObjectID = "qqO-cz-6yk"; */
+"qqO-cz-6yk.text" = "Label";
+
+/* Class = "UILabel"; text = "00:00"; ObjectID = "r1u-2t-YuB"; */
+"r1u-2t-YuB.text" = "00:00";
+
+/* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "sBh-7D-rCq"; */
+"sBh-7D-rCq.title" = "Назад";
 
 /* Class = "UIBarButtonItem"; title = "Back"; ObjectID = "u5H-XA-z63"; */
 "u5H-XA-z63.title" = "Назад";
+
+/* Class = "UILabel"; text = "label label labellabelv"; ObjectID = "uTD-GR-fHv"; */
+"uTD-GR-fHv.text" = "label label labellabelv";
 
 /* Class = "UILabel"; text = "00:00"; ObjectID = "yMg-RE-V4N"; */
 "yMg-RE-V4N.text" = "00:00";
 
 /* Class = "UILabel"; text = "LOGO"; ObjectID = "ykZ-rq-1V2"; */
-"ykZ-rq-1V2.text" = "ЛОГОТИП";
+"ykZ-rq-1V2.text" = "ЛОГО";
 
-/* Class = "UIBarButtonItem"; title = "Log off"; ObjectID = "ym7-cf-VjD"; */
-"ym7-cf-VjD.title" = "Вихід";
+/* Class = "UILabel"; text = "START"; ObjectID = "zY2-fF-JeM"; */
+"zY2-fF-JeM.text" = "СТАРТ";
 
 /* Class = "UIButton"; normalTitle = "CHOOSE LOCATION"; ObjectID = "zbf-y8-6w5"; */
 "zbf-y8-6w5.normalTitle" = "ОБРАТИ МІСЦЕ";
